--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+	<title>Balan S.P</title>
+  </head>
+  <body>
+    <h1>Balan!</h1>
+  </body>
+</html>
